# dioxus-web-worker

./: Cargo.toml
src/: main.rs
