[package]
name = "webworkers-dioxus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { path = "../../dioxus/packages/dioxus" }
dioxus-web = { path = "../../dioxus/packages/web" }
gloo-worker = "0.2.1"
js-sys = { version = "0.3.64" }
log = "0.4.19"
wasm-bindgen = "0.2.87"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'Document',
    'HtmlElement',
    'HtmlInputElement',
    'MessageEvent',
    'Window',
    'Worker',
    'WorkerOptions',
    'WorkerType',
    'WorkerGlobalScope',
]
